k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atp-frontend
spec:
  selector:
    matchLabels:
      run: atp-frontend
  replicas: 1
  template:
    metadata:
      labels:
        run: atp-frontend
    spec:
      containers:
      - name: atp-frontend
        image: ensena/atp-frontend
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atp-backend
spec:
  selector:
    matchLabels:
      run: atp-backend
  replicas: 1
  template:
    metadata:
      labels:
        run: atp-backend
    spec:
      containers:
      - name: atp-backend
        image: ensena/atp-backend
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: atp-frontend
  labels:
    run: atp-frontend
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    run: atp-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: atp-backend
  labels:
    run: atp-backend
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    run: atp-backend

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-hsts: "true"
    traefik.ingress.kubernetes.io/frontend-entry-points: https
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: atp
  namespace: default
spec:
  rules:
  - host: atp.xn--ensea-rta.cl
    http:
      paths:
      - backend:
          service:
            name: atp-frontend
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: atp-backend
            port:
              number: 80
        path: /api/
        pathType: ImplementationSpecific
  tls:
  - {}
  - secretName: ensena-tls
status:
  loadBalancer: {}
